--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.24.1",
     "axios": "^0.27.2",
     "lucide-react": "^0.90.0",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
