--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^4.24.1",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.90.0",
     "moment": "^2.29.4",
     "next": "12.3.1",
