--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "md5": "^2.3.0",
     "moment": "^2.29.4",
     "next": "12.3.1",
+    "pdf-lib": "^1.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
